fix stats bar wrap

--- a/app/assets/stylesheets/blocks/b-stats_bar.sass
+++ b/app/assets/stylesheets/blocks/b-stats_bar.sass
@@ -42,18 +42,20 @@ $bar_height: 13px
     line-height: $bar_height
     overflow: hidden
     position: relative
+    white-space: nowrap
     width: 100%
 
     .first, .second, .third
       color: white
       cursor: default
       display: inline-block
-      font-weight: normal
-      text-align: center
-      height: inherit
       font-size: 11px
+      font-weight: normal
       height: $bar_height
+      height: inherit
       line-height: $bar_height
+      text-align: center
+      white-space: nowrap
 
     .third
       background: #aaa
